<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiCalc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/personWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weight"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="59dp" />

        <EditText
            android:id="@+id/personHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="101dp"
            tools:layout_editor_absoluteY="155dp" />

        <Button
            android:id="@+id/calcBmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_bmi"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="283dp" />

        <TextView
            android:id="@+id/bmiResult"
            android:layout_width="222dp"
            android:layout_height="65dp"
            android:hint="@string/_00_0"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="410dp" />
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>